kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web
  namespace: python-web
  labels:
    app: python-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-web
  strategy: {}
  template:
    metadata:
      labels:
        app: python-web
    spec:
      containers:
      - name: python-web
        image: 684495519937.dkr.ecr.eu-west-2.amazonaws.com/sre-repository:4bad0e40
        ports:
          - containerPort: 8080
        resources: {}
