kubernetes/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2023-03-03T11:35:40Z"
    labels:
      app: web
    name: web
    namespace: default
    resourceVersion: "4509"
    uid: 731967a6-ace2-48c7-b141-7423ec1e7c53
  spec:
    clusterIP: 10.97.78.156
    clusterIPs:
    - 10.97.78.156
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - nodePort: 31603
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: web
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2023-03-03T13:24:26Z"
    labels:
      app: web-dummy
    name: web-dummy
    namespace: default
    resourceVersion: "10111"
    uid: 7d35a64b-69b6-44a9-969c-67c7985f740d
  spec:
    clusterIP: 10.104.223.208
    clusterIPs:
    - 10.104.223.208
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - nodePort: 30001
      port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      app: web-dummy
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
